--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@vercel/analytics": "^1.2.2",
+    "firebase": "^10.13.1",
     "framer-motion": "^10.18.0",
     "lucide-react": "^0.314.0",
     "react": "^18.2.0",
